NBodySimulation/NBodySimulation/x64/Debug/NBodySimulation.log
  Compiling CUDA source file nbody.cu...
  
  C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe" -gencode=arch=compute_75,code=\"sm_75,compute_75\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart hybrid  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\x64\Debug\nbody.cu.obj" "C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\nbody.cu" 
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(20): error : identifier "glCreateShader" is undefined
        GLuint VertexShaderID = glCreateShader(0x8B31);
                                ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(53): error : identifier "glShaderSource" is undefined
        glShaderSource(VertexShaderID, 1, &VertexSourcePointer , 0);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(54): error : identifier "glCompileShader" is undefined
        glCompileShader(VertexShaderID);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(57): error : identifier "glGetShaderiv" is undefined
        glGetShaderiv(VertexShaderID, 0x8B81, &Result);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(61): error : identifier "glGetShaderInfoLog" is undefined
            glGetShaderInfoLog(VertexShaderID, InfoLogLength, 0, &VertexShaderErrorMessage[0]);
            ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(76): error : identifier "glGetShaderInfoLog" is undefined
            glGetShaderInfoLog(FragmentShaderID, InfoLogLength, 0, &FragmentShaderErrorMessage[0]);
            ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(82): error : identifier "glCreateProgram" is undefined
        GLuint ProgramID = glCreateProgram();
                           ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(83): error : identifier "glAttachShader" is undefined
        glAttachShader(ProgramID, VertexShaderID);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(85): error : identifier "glLinkProgram" is undefined
        glLinkProgram(ProgramID);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(88): error : identifier "glGetProgramiv" is undefined
        glGetProgramiv(ProgramID, 0x8B82, &Result);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(92): error : identifier "glGetProgramInfoLog" is undefined
            glGetProgramInfoLog(ProgramID, InfoLogLength, 0, &ProgramErrorMessage[0]);
            ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(96): error : identifier "glDetachShader" is undefined
        glDetachShader(ProgramID, VertexShaderID);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(99): error : identifier "glDeleteShader" is undefined
        glDeleteShader(VertexShaderID);
        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(108): error : identifier "glCreateShader" is undefined
    	GLuint VertexShaderID = glCreateShader(0x8B31);
    	                        ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(109): error : identifier "GL_GEOMETRY_SHADER" is undefined
    	GLuint GeometryShaderID = glCreateShader(GL_GEOMETRY_SHADER);
    	                                         ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(152): error : identifier "glShaderSource" is undefined
    	glShaderSource(VertexShaderID, 1, &VertexSourcePointer , 0);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(153): error : identifier "glCompileShader" is undefined
    	glCompileShader(VertexShaderID);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(156): error : identifier "glGetShaderiv" is undefined
    	glGetShaderiv(VertexShaderID, 0x8B81, &Result);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(160): error : identifier "glGetShaderInfoLog" is undefined
    		glGetShaderInfoLog(VertexShaderID, InfoLogLength, 0, &VertexShaderErrorMessage[0]);
    		^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(177): error : identifier "glGetShaderInfoLog" is undefined
    		glGetShaderInfoLog(GeometryShaderID, InfoLogLength, 0, &GeometryShaderErrorMessage[0]);
    		^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(194): error : identifier "glGetShaderInfoLog" is undefined
    		glGetShaderInfoLog(FragmentShaderID, InfoLogLength, 0, &FragmentShaderErrorMessage[0]);
    		^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(201): error : identifier "glCreateProgram" is undefined
    	GLuint ProgramID = glCreateProgram();
    	                   ^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(202): error : identifier "glAttachShader" is undefined
    	glAttachShader(ProgramID, VertexShaderID);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(205): error : identifier "glLinkProgram" is undefined
    	glLinkProgram(ProgramID);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(208): error : identifier "glGetProgramiv" is undefined
    	glGetProgramiv(ProgramID, 0x8B82, &Result);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(212): error : identifier "glGetProgramInfoLog" is undefined
    		glGetProgramInfoLog(ProgramID, InfoLogLength, 0, &ProgramErrorMessage[0]);
    		^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(217): error : identifier "glDetachShader" is undefined
    	glDetachShader(ProgramID, VertexShaderID);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util\shader.h(221): error : identifier "glDeleteShader" is undefined
    	glDeleteShader(VertexShaderID);
    	^
  
C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\util/cpu_anim_points.h(61): warning #2464-D: conversion from a string literal to "char *" is deprecated
            char* dummy = "";
                          ^
  
  Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"
  
  28 errors detected in the compilation of "C:/Users/marss/Documents/me files/git/honours/MiscellaneousCUDA/NBodySimulation/NBodySimulation/nbody.cu".
  nbody.cu
C:\Program Files\Microsoft Visual Studio\2022\Professional\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 13.1.targets(803,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe" -gencode=arch=compute_75,code=\"sm_75,compute_75\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart hybrid  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\x64\Debug\nbody.cu.obj" "C:\Users\marss\Documents\me files\git\honours\MiscellaneousCUDA\NBodySimulation\NBodySimulation\nbody.cu"" exited with code 2.
